# os2mo-os2sync-export

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  docker.env  init.config.yml  pyproject.toml  queries.graphql  schema.graphql
.gitlab/: dependabot.yml
.reuse/: dep5
exporters/os2sync_export/os2sync_export/: __main__.py
os2sync_export/: __init__.py  __main__.py  cleanup_fk_users.py  config.py  delete_user.py  depends.py  equivalence_test.py  exceptions.py  lcdb_os2mo.py  main.py  os2mo.py  os2mo_gql.py  os2sync.py  os2sync_models.py  os2synccli.py  priority_by_class.py  stub.py  sync_fk_org_uuids_to_mo.py  templates.py
os2sync_export/autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  create_i_t_user.py  enums.py  event_send.py  exceptions.py  find_address_unit_or_person.py  find_engagement_person.py  find_f_k_itsystem.py  find_ituser_unit_or_person.py  find_k_l_e_unit.py  find_manager_unit.py  fragments.py  get_address.py  get_engagement.py  get_f_k_org_user_map.py  get_i_t_account_enddate.py  get_i_t_accounts.py  get_it_user.py  get_k_l_es.py  get_manager.py  input_types.py  locate_f_k_user.py  query_ancestors.py  query_employees.py  read_all_employee_uuids.py  read_all_org_unit_uuids.py  read_orgunit.py  read_user.py  read_user_i_t_accounts.py  scalars.py  terminate_i_t_user.py  test__get_class.py  testing__address_create.py  testing__employee_create.py  testing__engagement_create.py  testing__get_class.py  testing__get_itsystem.py  (+6 more)
tests/: conftest.py  helpers.py  test__main__.py  test_ad_as_bvn.py  test_address_type_conversions.py  test_config.py  test_get_sts_orgunit.py  test_get_sts_user.py  test_graphql.py  test_lcdb.py  test_lcdb_ad_as_bvn.py  test_lcdb_get_sts_user.py  test_main.py  test_os2mo.py  test_os2sync.py  test_os2sync_export.py  test_person_conversions.py  test_uuid_from_it_system.py  test_webtest.py
tests/integration/: test_itusers.py  test_multiple_it_users.py  test_org_units.py  test_timezone_bug.py
tests/unittest/: test_cleanup_fk_users.py  test_os2mo_gql.py  test_os2sync_models.py
