# SPDX-FileCopyrightText: Magenta ApS
#
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "os2sync_export"
version = "0.0.0" # versioning handled by conventional commits
description = "Integration from OS2mo to OS2Sync"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["os2mo", "dipex", "os2sync"]

[tool.poetry.dependencies]
python = "^3.11.0"
fastramqpi = "^1.4.3"
gql = "^3.4.1"
Jinja2 = "^3.1"
prometheus-fastapi-instrumentator = "^6.0.0"
ra-utils = {extras = ["prometheus-client"], version = "^1.13.9"}
raclients = "^3.1.4"
requests = "^2.31.0"
sentry-sdk = "^1.25.1"
tenacity = "^8.1.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pre-commit = "^3.2.2"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.75.3"
parameterized = "^0.9.0"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-split = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"
statistics = "true"
