# SPDX-FileCopyrightText: Magenta ApS
#
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "os2sync_export"
version = "0.0.0" # versioning handled by conventional commits
description = "Integration from OS2mo to OS2Sync"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-data-import-and-export"
keywords = ["os2mo", "dipex", "os2sync"]

[tool.poetry.dependencies]
python = "^3.11.0"
fastramqpi = "^1.7.0"
gql = "^3.5.0"
Jinja2 = "^3.1"
prometheus-fastapi-instrumentator = "^6.1.0"
ra-utils = {extras = ["prometheus-client"], version = "^1.14.0"}
raclients = "^3.3.5"
requests = "^2.32.3"
sentry-sdk = "^2.13.0"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.1"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.75.3"
parameterized = "^0.9.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-split = "^0.8.1"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, E501"
statistics = "true"

[tool.pytest.ini_options]
asyncio_mode="auto"
